# tla

./: .gitignore  Cargo.toml  LICENSE  README.md
fixtures/: missing_init.tla  missing_next.tla  ok.tla  unused.tla
src/: check.rs  cli.rs  doctor.rs  fmt.rs  lib.rs  main.rs  tla_parser.rs  tooling.rs
src/lint/: mod.rs  reporter.rs  rules.rs  types.rs
tests/: lint.rs
tests/snapshots/: lint__json_output.snap
