[package]
name = "tla"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-tlaplus = "1.5.0"
walkdir = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
