[package]
name = "tla-cli"
version = "0.1.1"
edition = "2024"
description = "TLA+ CLI for linting, formatting, and TLC checks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/younes-io/tla"
keywords = ["tla", "tla+", "cli", "lint", "tlc"]
categories = ["command-line-utilities"]
exclude = ["target/", "tools/", "**/*.jar", "**/*.snap.new", "**/*.snap.old", ".idea/", ".DS_Store"]
rust-version = "1.85"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-tlaplus = "1.5.0"
walkdir = "2"
which = "5"
home = "=0.5.11"

[dev-dependencies]
insta = { version = "1", features = ["json"] }

[[bin]]
name = "tla"
path = "src/main.rs"
